--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,10 +123,6 @@ a:hover {
     min-width: 767px;
 }
 
-#home .wrap-photos {
-    display: flex;
-}
-
 #m-nav>.wrap .menu {
     margin-right: 5px;
 }
@@ -150,6 +146,48 @@ a:hover {
     width: 60px;
     height: 60px;
     border-radius: 50%;
+}
+
+#home .wrap-photos {
+    display: flex;
+}
+
+#home .wrap-photos img {
+    border-radius: 15px;
+}
+
+#home .wrap-bigimage {
+    position: fixed;
+    z-index: 8888;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .5);
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 10px;
+}
+
+#home .wrap-bigimage img {
+    height: 100%;
+    width: auto;
+}
+
+@media (max-width:767px) {
+    #home .wrap-image img {
+        width: 100%;
+        height: auto;
+    }
+}
+
+
+#maintenance {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -230,7 +268,7 @@ a:hover {
 }
 
 .admin .admin-content {
-    padding: 2rem !important;
+    padding: 1rem !important;
 }
 
 
@@ -242,6 +280,10 @@ a:hover {
 }
 
 #admin-users table img,
+#admin-videos table img,
 #admin-photos table img {
-    width: 100px;
+    width: auto;
+    height: 110px;
 }
+
+/*admin-photos*/
